--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         l.appendChild(y);
       })(window, document, "https://cdn.500apps.io/js/push/", "push.min.js");
 
-      (window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "push.min.js");
+      // (window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "push.min.js");
       // https://cdn.500apps.io/js/push/push.min.js
     </script>
   </head>
