--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         y.async = 1;
         y.src = s + h;
         l.appendChild(y);
-      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "pushdist.min.js");
+      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "push.min.js");
       
 
       // https://pushly.s3.ap-south-1.amazonaws.com/lib/pushdist.min.js
