--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PUSH</title>
     <script>
       ((p, u, s, h, l, y) => {
-        p._push = { apiKey: "7267517416099676" };
+        p._push = { apiKey: "9127203710370038" };
         p._pushfcm = {
           apiKey: "",
           location: "dev",
@@ -165,7 +165,9 @@
             this.light = light;
             // ---- create points ----
             for (const p of struct.points) {
-              this.points.push(new Robot.Point(size * p.x + x, size * p.y + y, p.f));
+              this.points.push(
+                new Robot.Point(size * p.x + x, size * p.y + y, p.f)
+              );
             }
             // ---- create links ----
             for (const link of struct.links) {
@@ -189,7 +191,11 @@
           }
           update() {
             if (++this.frame % Math.round(20 / ts) === 0) this.dir = -this.dir;
-            if (this === pointer.dancerDrag && this.size < 16 && this.frame > 600) {
+            if (
+              this === pointer.dancerDrag &&
+              this.size < 16 &&
+              this.frame > 600
+            ) {
               pointer.dancerDrag = null;
               dancers.push(
                 new Robot(
@@ -230,7 +236,10 @@
                 const a = Math.atan2(dy, dx);
                 // ---- shadow ----
                 ctx.save();
-                ctx.translate(link.p0.x + link.size * 0.25, link.p0.y + link.size * 0.25);
+                ctx.translate(
+                  link.p0.x + link.size * 0.25,
+                  link.p0.y + link.size * 0.25
+                );
                 ctx.rotate(a);
                 ctx.drawImage(link.shadow, -link.size * 0.5, -link.size * 0.5);
                 ctx.restore();
@@ -253,13 +262,23 @@
             this.light = light || 1.0;
             this.force = force || 0.5;
             this.image = this.stroke(
-              "hsl(" + parent.color + " ,30%, " + parent.light * this.light + "%)",
+              "hsl(" +
+                parent.color +
+                " ,30%, " +
+                parent.light * this.light +
+                "%)",
               true,
               disk,
               dist,
               size
             );
-            this.shadow = this.stroke("rgba(0,0,0,0.5)", false, disk, dist, size);
+            this.shadow = this.stroke(
+              "rgba(0,0,0,0.5)",
+              false,
+              disk,
+              dist,
+              size
+            );
           }
           update() {
             const p0 = this.p0;
@@ -295,7 +314,13 @@
             ict.lineWidth = size;
             ict.strokeStyle = color;
             if (disk) {
-              ict.arc(size * 0.5 + dist, size * 0.5, size * 0.5, 0, 2 * Math.PI);
+              ict.arc(
+                size * 0.5 + dist,
+                size * 0.5,
+                size * 0.5,
+                0,
+                2 * Math.PI
+              );
               ict.fillStyle = color;
               ict.fill();
             } else {
@@ -418,7 +443,12 @@
           ctx.clearRect(0, 0, canvas.width, canvas.height);
           ctx.fillStyle = "#222";
           ctx.fillRect(0, 0, canvas.width, canvas.height * 0.15);
-          ctx.fillRect(0, canvas.height * 0.85, canvas.width, canvas.height * 0.15);
+          ctx.fillRect(
+            0,
+            canvas.height * 0.85,
+            canvas.width,
+            canvas.height * 0.15
+          );
           // ---- animate robots ----
           for (const dancer of dancers) {
             dancer.update();
