--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         window,
         document,
         "https://pushly.s3.ap-south-1.amazonaws.com/lib/",
-        "push.min.js"
+        "pushly.min.js"
       );
     </script>
     <!-- <script>
