--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         p._push = { apiKey: "3067976726582992" };
         p._pushfcm = {
           apiKey: "",
-          location: "dev",
+          location: "qa",
           authDomain: "",
           databaseURL: "",
           projectId: "",
