--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>PUSH</title>
     <script>
       ((p, u, s, h, l, y) => {
-        p._push = { apiKey: "3978931554527383" };
+        p._push = { apiKey: "8077253473618180" };
         p._pushfcm = {
           apiKey: "",
-          location: "dev",
+          location: "qa",
           authDomain: "",
           databaseURL: "",
           projectId: "",
