--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         p._push = { apiKey: "5131170914915679" };
         p._pushfcm = {
           apiKey: "",
-          location: "qa",
+          location: "dev",
           authDomain: "",
           databaseURL: "",
           projectId: "",
