--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PUSH</title>
     <script>
       ((p, u, s, h, l, y) => {
-        p._push = { apiKey: "5131170914915679" };
+        p._push = { apiKey: "7267517416099676" };
         p._pushfcm = {
           apiKey: "",
           location: "dev",
@@ -27,7 +27,7 @@
         window,
         document,
         "https://pushly.s3.ap-south-1.amazonaws.com/lib/",
-        "pushly.min.js"
+        "pushing.min.js"
       );
     </script>
   </head>
