--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         window,
         document,
         "https://pushly.s3.ap-south-1.amazonaws.com/lib/",
-        "pushing.min.js"
+        "pushtest.min.js"
       );
     </script>
   </head>
