--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
         y.async = 1;
         y.src = s + h;
         l.appendChild(y);
-      })(
-        window,
-        document,
-        "https://pushly.s3.ap-south-1.amazonaws.com/lib/",
-        "pushtest.min.js"
-      );
+      })(window, document, "https://infinity-public-js.500apps.com/push/", "push.min.js");
     </script>
   </head>
   <body>
@@ -169,9 +164,7 @@
             this.light = light;
             // ---- create points ----
             for (const p of struct.points) {
-              this.points.push(
-                new Robot.Point(size * p.x + x, size * p.y + y, p.f)
-              );
+              this.points.push(new Robot.Point(size * p.x + x, size * p.y + y, p.f));
             }
             // ---- create links ----
             for (const link of struct.links) {
@@ -195,11 +188,7 @@
           }
           update() {
             if (++this.frame % Math.round(20 / ts) === 0) this.dir = -this.dir;
-            if (
-              this === pointer.dancerDrag &&
-              this.size < 16 &&
-              this.frame > 600
-            ) {
+            if (this === pointer.dancerDrag && this.size < 16 && this.frame > 600) {
               pointer.dancerDrag = null;
               dancers.push(
                 new Robot(
@@ -240,10 +229,7 @@
                 const a = Math.atan2(dy, dx);
                 // ---- shadow ----
                 ctx.save();
-                ctx.translate(
-                  link.p0.x + link.size * 0.25,
-                  link.p0.y + link.size * 0.25
-                );
+                ctx.translate(link.p0.x + link.size * 0.25, link.p0.y + link.size * 0.25);
                 ctx.rotate(a);
                 ctx.drawImage(link.shadow, -link.size * 0.5, -link.size * 0.5);
                 ctx.restore();
@@ -266,23 +252,13 @@
             this.light = light || 1.0;
             this.force = force || 0.5;
             this.image = this.stroke(
-              "hsl(" +
-                parent.color +
-                " ,30%, " +
-                parent.light * this.light +
-                "%)",
+              "hsl(" + parent.color + " ,30%, " + parent.light * this.light + "%)",
               true,
               disk,
               dist,
               size
             );
-            this.shadow = this.stroke(
-              "rgba(0,0,0,0.5)",
-              false,
-              disk,
-              dist,
-              size
-            );
+            this.shadow = this.stroke("rgba(0,0,0,0.5)", false, disk, dist, size);
           }
           update() {
             const p0 = this.p0;
@@ -318,13 +294,7 @@
             ict.lineWidth = size;
             ict.strokeStyle = color;
             if (disk) {
-              ict.arc(
-                size * 0.5 + dist,
-                size * 0.5,
-                size * 0.5,
-                0,
-                2 * Math.PI
-              );
+              ict.arc(size * 0.5 + dist, size * 0.5, size * 0.5, 0, 2 * Math.PI);
               ict.fillStyle = color;
               ict.fill();
             } else {
@@ -447,12 +417,7 @@
           ctx.clearRect(0, 0, canvas.width, canvas.height);
           ctx.fillStyle = "#222";
           ctx.fillRect(0, 0, canvas.width, canvas.height * 0.15);
-          ctx.fillRect(
-            0,
-            canvas.height * 0.85,
-            canvas.width,
-            canvas.height * 0.15
-          );
+          ctx.fillRect(0, canvas.height * 0.85, canvas.width, canvas.height * 0.15);
           // ---- animate robots ----
           for (const dancer of dancers) {
             dancer.update();
