--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>PUSH</title>
   <script>
     ((p, u, s, h, l, y) => {
-      p._push = { apiKey: "4356339171938141" };
+      p._push = { apiKey: "7267517416099676" };
       p._pushfcm = {
         apiKey: "",
-        location: "qa",
+        location: "dev",
         authDomain: "",
         databaseURL: "",
         projectId: "",
