--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       p._push = { apiKey: "9053852404762382" };
       p._pushfcm = {
         apiKey: "",
-        location: "qa",
+        location: "dev",
         authDomain: "",
         databaseURL: "",
         projectId: "",
