--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>PUSH</title>
   <script>
     ((p, u, s, h, l, y) => {
-      p._push = { apiKey: "7012647864597015" };
+      p._push = { apiKey: "6201960291328554" };
       p._pushfcm = {
         apiKey: "",
-        location: "ap1",
+        location: "qa",
         authDomain: "",
         databaseURL: "",
         projectId: "",
