--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
       l.appendChild(y);
     })(window, document, "https://infinity-public-js.500apps.com/push/", "push.min.js");
   </script>
+    <script>
+      (function(n, j, c, h, a, t) {
+        t = j.getElementsByTagName("head")[0];
+        a = j.createElement("script");
+        a.async = 1;
+        a.src = c + h;
+        a.onload = () => {
+          n._NC.init("9681677306622212", 15, "dev");
+        };
+        t.appendChild(a);
+      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "ninjachat.js");
+    </script>
 </head>
 
 <body>
