--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           n._NC.init("9681677306622212", 15, "dev");
         };
         t.appendChild(a);
-      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "ninjachat.js");
+      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "ninjachat.min.js");
     </script>
 </head>
 
