--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       l.appendChild(y);
     })(window, document, "https://infinity-public-js.500apps.com/push/", "push.min.js");
   </script>
+    <div id="app"></div>
     <script>
       ((n, j, c, h, a, t)=> {
         t = j.getElementsByTagName("head")[0];
