--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
   <style>
     body,
     html {
-      position: absolute;
+/*       position: absolute; */
       margin: 0;
       padding: 0;
       width: 100%;
