--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           b._Botup.init("6961464327733289", 271, "dev");
         };
         c.appendChild(p);
-      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "botupchat.js");
+      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "/dist/botupchat.js");
     </script>
     
   </head>
