--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
         c.appendChild(p);
       })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "/dist/botupchat.js");
     </script>
-    
+    <script>
+        (function(s, i, t, e, r, p) {
+      p = i.getElementsByTagName('head')[0];
+      r = i.createElement('script');
+      r.async = 1;
+      r.src = t + e;
+      r.onload = () => {
+          s._sr_r_.init('4457409027271319',5,'dev')
+    };
+    p.appendChild(r);
+    })(window, document, 'https://infinity-public-js.500apps.com/dev/v0.0.67/siterecording/', 'siterecorder.min.js');
+    </script>
   </head>
 
   <body>
