--- a/index.html
+++ b/index.html
@@ -6,29 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOTUP</title>
     <div id="app"></div>
-  <script>
-      ((b, o, t, u, p, c) => {
-        c = o.getElementsByTagName("head")[0];
-        p = o.createElement("script");
-        p.async = 1;
-        p.src = t + u;
-        p.onload = () => {
-          b._Botup.init("6961464327733289", 271, "dev");
+ <script>
+      ((n, j, c, h, a, t)=> { 
+        t = j.getElementsByTagName("head")[0];
+        a = j.createElement("script");
+        a.async = 1;
+        a.src = c + h;
+        a.onload = () => {
+          n._Botup.init("6961464327733289", 271, "dev");
         };
-        c.appendChild(p);
-      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "dist/botupchat.js");
-    </script>
-    <script>
-        (function(s, i, t, e, r, p) {
-      p = i.getElementsByTagName('head')[0];
-      r = i.createElement('script');
-      r.async = 1;
-      r.src = t + e;
-      r.onload = () => {
-          s._sr_r_.init('4457409027271319',5,'dev')
-    };
-    p.appendChild(r);
-    })(window, document, 'https://infinity-public-js.500apps.com/dev/v0.0.67/siterecording/', 'siterecorder.min.js');
+        t.appendChild(a);
+      })(window, document, "https://pushly.s3.ap-south-1.amazonaws.com/lib/", "botupchat.js");
     </script>
   </head>
 
