--- a/index.html
+++ b/index.html
@@ -26,212 +26,120 @@
   </head>
 
   <body>
-    <div class="boxes">
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
-      <div class="box"><div class="box_top"></div><div class="box_front"></div><div class="box_right"></div><div class="box_back"></div><div class="box_left"></div><div class="box_bottom"></div></div>
+    <div class="scene">
+      <div class="wrap">
+        <div class="wall wall-right"></div>
+        <div class="wall wall-left"></div>
+        <div class="wall wall-top"></div>
+        <div class="wall wall-bottom"></div>
+        <div class="wall wall-back"></div>
+      </div>
+      <div class="wrap">
+        <div class="wall wall-right"></div>
+        <div class="wall wall-left"></div>
+        <div class="wall wall-top"></div>
+        <div class="wall wall-bottom"></div>
+        <div class="wall wall-back"></div>
+      </div>
     </div>
     <style>
-      body,
-      html {
-        position: absolute;
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-      }
-
-     
-
-
-
-      /*
-  ************************************************
-  To regenerate the animation, modify the text
-  inside this comment, and give the SCSS file
-  a couple of seconds to re-rendered.
-  ************************************************
-*/
-
-*, *::before, *::after {
-    padding: 0;
-    margin: 0 auto;
-    box-sizing: border-box;
+  html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
-    background-color: #000;
-    color: #fff;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    perspective: 1000px;
-    overflow: hidden;
+  background: #000;
+  text-align: center;
+}
+body::before {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
 }
 
-$min-row-height: random(25) * 1px;
-$max-row-height: $min-row-height + random(100) * 1px;
-$min-column-width: random(25) * 1px;
-$max-column-width: $min-column-width + random(100) * 1px;
-$min-box-height: random(25) * 1px;
-$max-box-height: $min-box-height + random(100) * 1px;
-$min-rotationY-angle: 0deg; 
-$max-rotationY-angle: random(90) * 1deg;
-$min-color-angle: random(360) * 1deg; 
-$max-color-angle: $min-color-angle + random(360) * 1deg;
-
-$currX: 0px;
-$currY: 0px;
-$boxesW: 0px;
-$boxesH: 0px;
-
-@for $i from 0 to 7 {
-
-    $currW: $min-column-width + random(max(1, $max-column-width - $min-column-width));
-    $currH: $min-row-height + random(max(1, $max-row-height - $min-row-height));
-
-    .box:nth-child(7n + #{$i + 1}) {
-        left: #{$currX};
-        width: #{$currW}
-    }
-
-    .box:nth-child(n + #{(7 * $i) + 1}):nth-child(-n  + #{7 * ($i + 1)}) {
-        top: #{$currY};
-        height: #{$currH}
-    }
-
-    $boxesW: $currX + $currW;
-    $boxesH: $currY + $currH;
-    $currX: $currX + $currW + $min-column-width + random(max(1, $max-column-width - $min-column-width));
-    $currY: $currY + $currH + $min-row-height + random(max(1, $max-row-height - $min-row-height));
-
-    @for $ii from 0 to 7 {
-        .box:nth-child(#{($i * 7) + $ii + 1}) {
-            --box-height: #{$min-box-height + random(max(1, $max-box-height - $min-box-height))};
-            --box-color: hsla(#{$min-color-angle + random(max(1, $max-color-angle - $min-color-angle))}, 85%, 75%);
-            --box-rotation: #{$min-rotationY-angle + random(max(1, $max-rotationY-angle - $min-rotationY-angle))};
-            --box-delay: #{random(600) / -100}s;
-        }
-    }
+.scene {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  perspective: 15px;
+  perspective-origin: 50% 50%;
 }
 
-.boxes {
-    position: relative;
-    width: $boxesW; height: $boxesH;
-    transform: rotateX(90deg) translateZ($max-box-height * -1.25);
-    transform-style: preserve-3d;
-    animation: sceneRotate 30s infinite linear;
-
-    @keyframes sceneRotate {
-        from { transform: rotateX(60deg) rotateY(0deg) rotateZ(0deg); }
-        to { transform: rotateX(60deg) rotateY(0deg) rotateZ(360deg); }
-    }
+.wrap {
+  position: absolute;
+  width: 1000px;
+  height: 1000px;
+  left: -500px;
+  top: -500px;
+  transform-style: preserve-3d;
+  animation: move 12s infinite linear;
+  animation-fill-mode: forwards;
 }
 
-.box {
-    position: absolute;
-    transform-style: preserve-3d;
-    transform: rotateZ(var(--box-rotation));
-    animation: boxZ 3s var(--box-delay) infinite ease-in-out alternate;
-
-    @keyframes boxZ {
-        from { transform: rotateZ(var(--box-rotation)) translateZ(var(--box-height)); } 
-        to { transform: rotateZ(var(--box-rotation)) translateZ(calc(var(--box-height) * -1)); } 
-    }
-
-    & > * {
-        position: absolute;
-        opacity: 0.8;
-        background-color: var(--box-color);
-        box-shadow: 0 0 30px #0007 inset;
-    }
-
-    &_top {
-        width: 100%; height: 100%;
-        transform: translateZ(var(--box-height));
-    }
-
-    &_front {
-        width: 100%; height: calc(var(--box-height) * 2);
-        bottom: 0;
-        transform-origin: bottom;
-        transform: rotateX(-90deg) translateY(50%);
-    }
-
-    &_right {
-        width: calc(var(--box-height) * 2); height: 100%;
-        right: 0;
-        transform-origin: right;
-        transform: rotateY(90deg) translateX(50%);
-    }
-
-    &_back {
-        width: 100%; height: calc(var(--box-height) * 2);
-        top: 0;
-        transform-origin: top;
-        transform: rotateX(90deg) translateY(-50%);
-    }
-
-    &_left {
-        width: calc(var(--box-height) * 2); height: 100%;
-        left: 0;
-        transform-origin: left;
-        transform: rotateY(90deg) translateX(-50%);
-    }
-
-    &_bottom {
-        width: 100%; height: 100%;
-        transform: rotateX(180deg) translateZ(var(--box-height));
-    }
+.wrap:nth-child(2) {
+  animation: move 12s infinite linear;
+  animation-delay: 6s;
 }
-    </style>
+
+.wall {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/18515/PIA09959-1280x800_copy.jpg);
+  background-size: cover;
+  opacity: 0;
+  animation: fade 12s infinite linear;
+}
+
+.wrap:nth-child(2) .wall {
+  animation-delay: 6s;
+}
+
+.wall-right {
+  transform: rotateY(90deg) translateZ(500px);
+}
+
+.wall-left {
+  transform: rotateY(-90deg) translateZ(500px);
+}
+
+.wall-top {
+  transform: rotateX(90deg) translateZ(500px);
+}
+
+.wall-bottom {
+  transform: rotateX(-90deg) translateZ(500px);
+}
+
+.wall-back {
+  transform: rotateX(180deg) translateZ(500px);
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes move {
+  0% {
+    transform: translateZ(-500px) rotate(0deg);
+  }
+  100% {
+    transform: translateZ(500px) rotate(0deg);
+  }
+}
+   </style>
   </body>
 </html>
