--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOTUP</title>
+    <div id="app"></div>
     <script>
       ((b, o, t, u, p, c) => {
         d = o.createElement("div");
@@ -17,7 +18,7 @@
         p.onload = () => {
           b._Botup.init("6961464327733289", "271", "dev");
         };
-        o.body.appendChild(d);
+        // o.body.appendChild(d);
         c.appendChild(p);
       })(window, document, "", "/botupchat.js");
 
@@ -26,119 +27,184 @@
   </head>
 
   <body>
-    <div class="scene">
-      <div class="wrap">
-        <div class="wall wall-right"></div>
-        <div class="wall wall-left"></div>
-        <div class="wall wall-top"></div>
-        <div class="wall wall-bottom"></div>
-        <div class="wall wall-back"></div>
+    <div class="clock">
+        <div class="outer-clock-face">
+          <div class="marking marking-one"></div>
+          <div class="marking marking-two"></div>
+          <div class="marking marking-three"></div>
+          <div class="marking marking-four"></div>
+        </div>
+        
+        <div class="inner-clock-face">
+          <div class="hand hour-hand"></div>
+          <div class="hand min-hand"></div>
+          <div class="hand second-hand"></div>
+        </div>
       </div>
-      <div class="wrap">
-        <div class="wall wall-right"></div>
-        <div class="wall wall-left"></div>
-        <div class="wall wall-top"></div>
-        <div class="wall wall-bottom"></div>
-        <div class="wall wall-back"></div>
-      </div>
-    </div>
+      <script>
+          const secondHand = document.querySelector('.second-hand');
+const minsHand = document.querySelector('.min-hand');
+const hourHand = document.querySelector('.hour-hand');
+
+function setDate() {
+  const now = new Date();
+  
+  const seconds = now.getSeconds();
+  const secondsDegrees = ((seconds / 60) * 360) + 90;
+  secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+  
+  const mins = now.getMinutes();
+  const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
+  minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+  
+  const hour = now.getHours();
+  const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
+  hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+}
+
+setInterval(setDate, 1000);
+
+setDate();
+      </script>
     <style>
-  html, body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+ html {
+  background: #d8dcd6;
+  text-align: center;
+  font-size: 10px;
 }
 
 body {
-  background: #000;
-  text-align: center;
-}
-body::before {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
+  margin: 0;
+  font-size: 2rem;
+  display: flex;
+  flex: 1;
+  min-height: 100vh;
+  align-items: center;
 }
 
-.scene {
+.clock {
+  width: 30rem;
+  height: 30rem;
   position: relative;
-  display: inline-block;
-  vertical-align: middle;
-  perspective: 15px;
-  perspective-origin: 50% 50%;
+  padding: 2rem;
+  border: 18px solid #D3D7D0;
+  box-shadow: 5px -5px 5px 0px rgba(242, 243, 242, 0.5), -5px 8px 8px 0px rgba(177, 185, 173, 0.5), inset -3.5px 5.5px 6px 0px rgba(177, 185, 173, 0.5), inset 3px -3px 1px 0px rgba(190, 197, 186, 0.15);
+  border-radius: 50%;
+  margin: 50px auto;
 }
 
-.wrap {
-  position: absolute;
-  width: 1000px;
-  height: 1000px;
-  left: -500px;
-  top: -500px;
-  transform-style: preserve-3d;
-  animation: move 12s infinite linear;
-  animation-fill-mode: forwards;
-}
-
-.wrap:nth-child(2) {
-  animation: move 12s infinite linear;
-  animation-delay: 6s;
-}
-
-.wall {
+.outer-clock-face {
+  position: relative;
+  background: #d8dcd6;
+  overflow: hidden;
   width: 100%;
   height: 100%;
+  border-radius: 100%;
+}
+
+.outer-clock-face::after {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+
+.outer-clock-face::after,
+.outer-clock-face::before,
+.outer-clock-face .marking {
+  content: "";
   position: absolute;
-  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/18515/PIA09959-1280x800_copy.jpg);
-  background-size: cover;
-  opacity: 0;
-  animation: fade 12s infinite linear;
+  width: 5px;
+  height: 100%;
+  background: #84C2B3;
+  z-index: 0;
+  left: 49%;
 }
 
-.wrap:nth-child(2) .wall {
-  animation-delay: 6s;
+.outer-clock-face .marking {
+  background: #9bc5bb;
+  width: 3px;
 }
 
-.wall-right {
-  transform: rotateY(90deg) translateZ(500px);
+.outer-clock-face .marking.marking-one {
+  -webkit-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  transform: rotate(30deg);
 }
 
-.wall-left {
-  transform: rotateY(-90deg) translateZ(500px);
+.outer-clock-face .marking.marking-two {
+  -webkit-transform: rotate(60deg);
+  -moz-transform: rotate(60deg);
+  transform: rotate(60deg);
 }
 
-.wall-top {
-  transform: rotateX(90deg) translateZ(500px);
+.outer-clock-face .marking.marking-three {
+  -webkit-transform: rotate(120deg);
+  -moz-transform: rotate(120deg);
+  transform: rotate(120deg);
 }
 
-.wall-bottom {
-  transform: rotateX(-90deg) translateZ(500px);
+.outer-clock-face .marking.marking-four {
+  -webkit-transform: rotate(150deg);
+  -moz-transform: rotate(150deg);
+  transform: rotate(150deg);
 }
 
-.wall-back {
-  transform: rotateX(180deg) translateZ(500px);
+.inner-clock-face {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  width: 80%;
+  height: 80%;
+  background: #d8dcd6;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
+  z-index: 1;
 }
 
-@keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  25% {
-    opacity: 1;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+.inner-clock-face::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 16px;
+  height: 16px;
+  border-radius: 18px;
+  margin-left: -9px;
+  margin-top: -6px;
+  background: #e38c63;
+  z-index: 11;
 }
-@keyframes move {
-  0% {
-    transform: translateZ(-500px) rotate(0deg);
-  }
-  100% {
-    transform: translateZ(500px) rotate(0deg);
-  }
+
+.hand {
+  width: 50%;
+  right: 50%;
+  height: 6px;
+  background: #e38c63;
+  position: absolute;
+  top: 50%;
+  border-radius: 6px;
+  transform-origin: 100%;
+  transform: rotate(90deg);
+  transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+}
+
+.hand.hour-hand {
+  width: 30%;
+  z-index: 3;
+}
+
+.hand.min-hand {
+  height: 3px;
+  z-index: 10;
+  width: 45%;
+}
+
+.hand.second-hand {
+  background: #767B78;
+  width: 45%;
+  height: 2px;
+  z-index: 1;
 }
    </style>
   </body>
