--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         };
         // o.body.appendChild(d);
         c.appendChild(p);
-      })(window, document, "", "/botupchat.js");
+      })(window, document, "", "/dist/botupchat.js");
 
       // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
     </script>
