--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         d.id = "app";
         c = o.getElementsByTagName("head")[0];
         p = o.createElement("script");
+        p.async = 1;
         p.id = "botup";
         p.src = t + u;
         p.onload = () => {
