--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         };
         c.appendChild(p);
         o.body.appendChild(d);
-      })(window, document, "https://widgets.500apps.com/botup/", "botupchat.js");
+      })(window, document, "", "botup/botupchat.js");
       // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
     </script>
   </head>
