--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOTUP</title>
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
     <script>
 
       // ((b, o, t, u, p, c) => {
@@ -36,7 +36,7 @@
         };
         c.appendChild(p);
         o.body.appendChild(d);
-      })(window, document, "", "botup/botupchat.js");
+      })(window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
       // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
     </script>
   </head>
