--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         p.onload = () => {
           b._Botup.init("6961464327733289", "271", "dev");
         };
+        o.lastChild.append(d);
         c.appendChild(p);
-        o.body.appendChild(d);
       })(window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
       // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
     </script>
