--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         };
         o.lastChild.append(d);
         c.appendChild(p);
-      })(window, document, "", "/botupchat.js");
+      })(window, document, "https://widgets.500apps.com/dev/botup/", "botupchat.js");
       // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
     </script>
   </head>
