--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           a.id = "ninjachat";
           a.src = c + h;
           a.onload = function () {
-            n._NC.init("7073265358051330", "244", "dev");
+            n._NC.init('2474062120142539','297','dev')
           };
           j.lastChild.append(d);
           t.appendChild(a);
