--- a/index.html
+++ b/index.html
@@ -7,36 +7,39 @@
     <title>BOTUP</title>
     <!-- <div id="app"></div> -->
     <script>
-      // ((b, o, t, u, p, c) => {
-      //   d = o.createElement("div");
-      //   d.id = "app";
-      //   c = o.getElementsByTagName("head")[0];
-      //   p = o.createElement("script");
-      //   p.async = 1;
-      //   p.id = "botup";
-      //   p.src = t + u;
-      //   p.onload = () => {
-      //     b._Botup.init("6961464327733289", "271", "dev");
-      //   };
-      //   // o.body.appendChild(d);
-      //   c.appendChild(p);
-      // })(window, document, "", "botupchat.js");
+
+      // setTimeout(function () {
+      //   (function (n, j, c, h, a, t) {
+      //     d = j.createElement("div");
+      //     d.id = "app";
+      //     t = j.getElementsByTagName("head")[0];
+      //     a = j.createElement("script");
+      //     a.async = 1;
+      //     a.id = "ninjachat";
+      //     a.src = c + h;
+      //     a.onload = function () {
+      //       n._NC.init('2474062120142539','297','dev')
+      //     };
+      //     j.lastChild.append(d);
+      //     t.appendChild(a);
+      //   })(window, document, "", "ninjachat.js");
+      // }, 2000);
 
       setTimeout(function () {
-        (function (n, j, c, h, a, t) {
-          d = j.createElement("div");
+        (function (b, o, t, u, p, c) {
+          d = o.createElement("div");
           d.id = "app";
-          t = j.getElementsByTagName("head")[0];
-          a = j.createElement("script");
-          a.async = 1;
-          a.id = "ninjachat";
-          a.src = c + h;
-          a.onload = function () {
-            n._NC.init('2474062120142539','297','dev')
+          c = o.getElementsByTagName("head")[0];
+          p = o.createElement("script");
+          p.async = 1;
+          p.id = "botup";
+          p.src = t + u;
+          p.onload = function () {
+            b._Botup.init("3230758851452091", "139", "ap1");
           };
-          j.lastChild.append(d);
-          t.appendChild(a);
-        })(window, document, "", "ninjachat.js");
+          o.lastChild.append(d);
+          c.appendChild(p);
+        })(window, document, "", "botupchat.js");
       }, 2000);
       // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
     </script>
