--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           p.id = "botup";
           p.src = t + u;
           p.onload = function () {
-            b._Botup.init("3230758851452091", "139", "ap1");
+//             b._Botup.init("3230758851452091", "139", "ap1");
+  		b._Botup.init('228836121416549', '371', 'dev')
+
           };
           o.lastChild.append(d);
           c.appendChild(p);
