--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           };
           o.lastChild.append(d);
           c.appendChild(p);
-        })(window, document, "https://nagendra-500.github.io/", "botupchat.js");
+        })(window, document, "", "botupchat.js");
       }, 2000);
       // (window, document, "https://widgets.500apps.com/dev/botup", "/botupchat.js");
     </script>
