updated clickdesk script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ninjachat</title>
     <!-- Google Tag Manager -->
-    <script>
+    <!-- <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -17,22 +17,41 @@
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-MSD6K4P");
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
     <!-- <div id="app"></div> -->
   </head>
 
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript
+    <!-- <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-MSD6K4P"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript>
+    ></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- ClickDesk Live Chat Service for websites -->
+    <script type="text/javascript">
+      var _glc = _glc || [];
+      _glc.push("all_ag9zfmNsaWNrZGVza2NoYXRyEgsSBXVzZXJzGICAsJjwxr4KDA");
+      var glcpath =
+        "https:" == document.location.protocol
+          ? "https://my.clickdesk.com/clickdesk-ui/browser/"
+          : "http://my.clickdesk.com/clickdesk-ui/browser/";
+      var glcp =
+        "https:" == document.location.protocol ? "https://" : "http://";
+      var glcspt = document.createElement("script");
+      glcspt.type = "text/javascript";
+      glcspt.async = true;
+      glcspt.src = glcpath + "livechat-cloud-new.js";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(glcspt, s);
+    </script>
+    <!-- End of ClickDesk -->
     <div class="clock">
       <div class="outer-clock-face">
         <div class="marking marking-one"></div>
