Removed default script

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
-    <script>
+    <!-- <script>
       const secondHand = document.querySelector(".second-hand");
       const minsHand = document.querySelector(".min-hand");
       const hourHand = document.querySelector(".hour-hand");
@@ -90,7 +90,7 @@
       setInterval(setDate, 1000);
 
       setDate();
-    </script>
+    </script> -->
     <!-- <style>
       html {
         background: #d8dcd6;
