--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ninjachat</title>
     <!-- Google Tag Manager -->
-    <!-- <script>
+    <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -17,25 +17,25 @@
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-MSD6K4P");
-    </script> -->
+    </script>
     <!-- End Google Tag Manager -->
     <!-- <div id="app"></div> -->
   </head>
 
   <body>
     <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript
+    <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-MSD6K4P"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript> -->
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- ClickDesk Live Chat Service for websites -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var _glc = _glc || [];
       _glc.push("all_ag9zfmNsaWNrZGVza2NoYXRyEgsSBXVzZXJzGICAsJjwxr4KDA");
       var glcpath =
@@ -50,7 +50,7 @@
       glcspt.src = glcpath + "livechat-cloud-new.js";
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(glcspt, s);
-    </script>
+    </script> -->
     <!-- End of ClickDesk -->
     <div class="clock">
       <div class="outer-clock-face">
@@ -66,7 +66,7 @@
         <div class="hand second-hand"></div>
       </div>
     </div>
-    <!-- <script>
+    <script>
       const secondHand = document.querySelector(".second-hand");
       const minsHand = document.querySelector(".min-hand");
       const hourHand = document.querySelector(".hour-hand");
@@ -90,8 +90,8 @@
       setInterval(setDate, 1000);
 
       setDate();
-    </script> -->
-    <!-- <style>
+    </script>
+    <style>
       html {
         background: #d8dcd6;
         text-align: center;
@@ -234,6 +234,6 @@
         height: 2px;
         z-index: 1;
       }
-    </style> -->
+    </style>
   </body>
 </html>
