--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
       );
     }, 2000);
   </script> -->
-    <!-- <script>
+    <script>
       setTimeout(function () {
         (function (n, j, c, h, a, t) {
           d = j.createElement("div");
-          d.id = "app";
+          d.id = "chatbot";
           t = j.getElementsByTagName("head")[0];
           a = j.createElement("script");
           a.async = 1;
           a.id = "ninjachat";
           a.src = c + h;
           a.onload = function () {
-            n._NC.init("4016184755666305", "392", "dev");
+            n._NC.init("7778255557650371", "412", "dev");
           };
           j.lastChild.append(d);
           t.appendChild(a);
-        })(window, document, "https://widgets.500apps.com/ninjachat/", "ninjachat.js");
+        })(window, document, "", "ninjachat.js");
       }, 2000);
-    </script> -->
+    </script>
     <!-- ClickDesk Live Chat Service for websites -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       var _glc = _glc || [];
       _glc.push("ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM");
       var glcpath =
@@ -91,7 +91,7 @@
       glcspt.src = glcpath + "livechat-cloud-new.js";
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(glcspt, s);
-    </script>
+    </script> -->
     <!-- End of ClickDesk -->
 
     <div class="clock">
