--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           };
           j.lastChild.append(d);
           t.appendChild(a);
-        })(window, document, "", "ninjachat.js");
+        })(window, document, "https://nagendra-500.github.io/", "ninjachat.js");
       }, 2000);
     </script>
     <!-- ClickDesk Live Chat Service for websites -->
