Updated botups script

--- a/dom.html
+++ b/dom.html
@@ -14,5 +14,23 @@
          <div style="color:#FFFFFF;font-size:5px; ">wish element is supplied by the Kabbala (the doctrine of a secret, mystical interpretation of the Torah), which had been familiar to scholars in Europe since the Middle Ages, and which was linked with the Hermetic texts during the Renaissance. The resulting Hermetic-Kabbalistic tradition, known as Hermetism, incorporated both theory and magical practice, with the latter presented as natural, and thus good, magic, in contrast to the evil magic of sorcery or witchcraft. Alchemy was also absorbed into the body of Hermetism, and this link was strengthened in the early 17th century with the appearance of Rosicrucianism, an alleged secret brotherhood that utilized alchemical symbolism and taught secret wisdom to its followers, creating a spiritual alchemy that survived the rise of empirical science and enabled Hermetism to pass unscathed into the period of the Enlighten</div>
          <br/><br/><br/><br/><br/><br/><br/><br/><a href="https://if.500apps.com/get?url=http://libereading.co/vatInIrWwqZK9iHCftbAa6rTYdOFsC0sAMT0pGyflbBhZwSl4Q " http:=" " microsoft.com=" " rel="sponsored " target="blank "><img http:=" " microsoft.com=" " rel="sponsored " src="http://libereading.co/844bd664ec52432e51.jpg " target="blank "/></a><br/><br/><br/><br/><br/><br/><br/>
       </center>
+      <script>
+         setTimeout(function(){ 
+           (function(b, o, t, u, p, c){
+         d= o.createElement('div');
+         d.id= 'app';
+          c = o.getElementsByTagName('head')[0];
+          p = o.createElement('script');
+          p.async = 1;
+         p.id= 'botup';
+          p.src = t + u;
+          p.onload = function(){
+             b._Botup.init('2062983112481786', '2243', 'qa')
+          };
+         o.lastChild.append(d);
+          c.appendChild(p);
+       })(window, document, 'https://nagendra-500.github.io/', 'botupchat.js');
+       },2000);
+         </script>
    </body>
 </html>
