--- a/index.html
+++ b/index.html
@@ -5,119 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ninjachat</title>
-    <!-- Google Tag Manager -->
-    <!-- <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-MSD6K4P");
-    </script> -->
-    <!-- End Google Tag Manager -->
-    <!-- <div id="app"></div> -->
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-MSD6K4P"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript> -->
-    <!-- End Google Tag Manager (noscript) -->
-
-    <!-- <script>
-    setTimeout(function () {
-      (function (b, o, t, u, p, c) {
-        d = o.createElement("div");
-        d.id = "app";
-        c = o.getElementsByTagName("head")[0];
-        p = o.createElement("script");
-        p.async = 1;
-        p.id = "botup";
-        p.src = t + u;
-        p.onload = function () {
-          b._Botup.init("620014629914624", "728", "ap1");
-        };
-        o.lastChild.append(d);
-        c.appendChild(p);
-      })(
-        window,
-        document,
-        "",
-        "botupchat.js"
-      );
-    }, 2000);
-  </script> -->
-      <!-- // setTimeout(function () {
-      //   (function (n, j, c, h, a, t) {
-      //     d = j.createElement("div");
-      //     d.id = "chatbot";
-      //     t = j.getElementsByTagName("head")[0];
-      //     a = j.createElement("script");
-      //     a.async = 1;
-      //     a.id = "ninjachat";
-      //     a.src = c + h;
-      //     a.onload = function () {
-      //       n._NC.init("7778255557650371", "412", "dev");
-      //     };
-      //     j.lastChild.append(d);
-      //     t.appendChild(a);
-      //   })(window, document, "https://nagendra-500.github.io/", "ninjachat.js");
-      // }, 2000);
-      // setTimeout(function () {
-      //   (function (b, o, t, u, p, c) {
-      //     d = o.createElement("div");
-      //     d.id = "app";
-      //     c = o.getElementsByTagName("head")[0];
-      //     p = o.createElement("script");
-      //     p.async = 1;
-      //     p.id = "botup";
-      //     p.src = t + u;
-      //     p.onload = function () {
-      //       b._Botup.init("3958197226454698", "1837", "ap1");
-      //     };
-      //     o.lastChild.append(d);
-      //     c.appendChild(p);
-      //   })(
-      //     window,
-      //     document,
-      //     "https://widgets.500apps.com/botup/",
-      //     "botupchat.js"
-      //   );
-      // }, 2000);
-
-      // setTimeout(function () {
-      //   (function (n, j, c, h, a, t) {
-      //     d = j.createElement("div");
-      //     d.id = "chatbot";
-      //     t = j.getElementsByTagName("head")[0];
-      //     a = j.createElement("script");
-      //     a.async = 1;
-      //     a.id = "ninjachat";
-      //     a.src = c + h;
-      //     a.onload = function () {
-      //       n._NC.init("207153581930892", "470", "dev");
-      //     };
-      //     j.lastChild.append(d);
-      //     t.appendChild(a);
-      //   })(
-      //     window,
-      //     document,
-      //     "https://widgets.500apps.com/dev/ninjachat/",
-      //     "ninjachat.js"
-      //   );
-      // }, 2000); -->
-
- 
+    <script>
+      setTimeout(function () {
+        (function (n, j, c, h, a, t) {
+          d = j.createElement("div");
+          d.id = "chatbot";
+          t = j.getElementsByTagName("head")[0];
+          a = j.createElement("script");
+          a.async = 1;
+          a.id = "ninjachat";
+          a.src = c + h;
+          a.onload = function () {
+            n._NC.init("207153581930892", "470", "dev");
+          };
+          j.lastChild.append(d);
+          t.appendChild(a);
+        })(
+          window,
+          document,
+          "https://widgets.500apps.com/dev/ninjachat/",
+          "ninjachat.js"
+        );
+      }, 2000);
+    </script>
 
     <div class="clock">
       <div class="outer-clock-face">
@@ -303,19 +216,5 @@
         z-index: 1;
       }
     </style>
-<!-- ClickDesk Live Chat Service for websites -->
-<script type='text/javascript'>
-  var _glc =_glc || []; _glc.push('ag9zfmNsaWNrZGVza2NoYXRyFAsSB3dpZGdldHMYgIDI6Nj4xQoM');
-  var glcpath = (('https:' == document.location.protocol) ? 'https://my.clickdesk.com/clickdesk-ui/browser/' : 
-  'http://my.clickdesk.com/clickdesk-ui/browser/');
-  var glcp = (('https:' == document.location.protocol) ? 'https://' : 'http://');
-  var glcspt = document.createElement('script'); glcspt.type = 'text/javascript'; 
-  glcspt.async = true; glcspt.src = glcpath + 'livechat-cloud-new.js';
-  var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(glcspt, s);
-  </script>
-  <!-- End of ClickDesk -->
-
-
-
   </body>
 </html>
